--- a/src/components/Content/index.scss
+++ b/src/components/Content/index.scss
@@ -5,6 +5,8 @@
 .content {
 	z-index: 1;
 	position: relative;
+	display: flex;
+	flex-direction: column;
 	flex-grow: 1;
 	& > * {
 		height: 100%;
